--- a/src/LogsExplorer.Server/LogsExplorer.Server.csproj
+++ b/src/LogsExplorer.Server/LogsExplorer.Server.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.0.0-beta1</VersionPrefix>
     <AssemblyName>LogsExplorer</AssemblyName>
   </PropertyGroup>
 
@@ -11,15 +11,16 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0-*" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0-*" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0-*" />
     <PackageReference Include="Serilog" Version="2.5.1-*" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.1-*" />
-    <PackageReference Include="Serilog.Sinks.MSSqlServerCoreEx" Version="1.0.1-*" />
+    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.1.1" />
     <PackageReference Include="Dapper" Version="1.50.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="index.html" />
+    <EmbeddedResource Include="db.sql" />
   </ItemGroup>
 
 </Project>
