--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0-preview2-final" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
