--- a/Sample/appsettings.Development.json
+++ b/Sample/appsettings.Development.json
@@ -6,5 +6,22 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Serilog": {
+    "Using": ["LogsExplorer"],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [{
+      "Name": "LogsExplorer",
+      "Args": {
+        "sqliteDbPath": "logs.db",
+        "restrictedToMinimumLevel": "Debug"
+      }
+    }],
+    "Enrich": ["FromLogContext"],
+    "Properties": {
+      "Application": "Sample"
+    }
   }
 }
