--- a/src/LogsExplorer.Server/LogsExplorer.Server.csproj
+++ b/src/LogsExplorer.Server/LogsExplorer.Server.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0-*" />
     <PackageReference Include="Serilog" Version="2.5.1-*" />
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.1.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.0-*" />
     <PackageReference Include="Dapper" Version="1.50.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
