--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "logs",
+  "name": "sejil",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Alaa Masoud",
+  "license": "Apache 2.0",
   "dependencies": {
     "antd": "^2.12.2",
     "mobx": "^3.2.1",
