--- a/sample/Sample/Sample.csproj
+++ b/sample/Sample/Sample.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Sejil.Server\Sejil.csproj" />
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.csproj" />
   </ItemGroup>
 
 </Project>
