--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/Sample/bin/Debug/netcoreapp2.0/Sample.dll",
+            "program": "${workspaceRoot}/sample/Sample2.0/bin/Debug/netcoreapp2.0/Sample.dll",
             "args": [],
-            "cwd": "${workspaceRoot}/Sample",
+            "cwd": "${workspaceRoot}/sample/Sample2.0",
             "stopAtEntry": false,
             "launchBrowser": {
                 "enabled": true,
