--- a/test/Sejil.Server.Test/Sejil.Test.csproj
+++ b/test/Sejil.Server.Test/Sejil.Test.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="Moq" Version="4.7.99" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.csproj" />
   </ItemGroup>
 
 </Project>
