Try change order of coverage report so that we can get artifacts

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ build_script:
 test_script:
   - ps: ./build.ps1 -target Test
 
-on_success:
+after_test:
   - ps: ./build.ps1 -target ExportCoverageReport
 
 artifacts:
