--- a/test/Sejil.Server.Test/Sejil.Test.csproj
+++ b/test/Sejil.Server.Test/Sejil.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="Moq" Version="4.7.99" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.0-*" />
   </ItemGroup>
 
   <ItemGroup>
