--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Alaa Masoud",
   "license": "Apache 2.0",
@@ -17,6 +17,7 @@
     "tslib": "^1.7.1"
   },
   "devDependencies": {
+    "@types/jest": "^20.0.6",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "awesome-typescript-loader": "^3.2.1",
@@ -24,12 +25,32 @@
     "gulp": "^3.9.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-rename": "^1.2.2",
+    "jest": "^20.0.4",
     "mobx-react-devtools": "^4.2.15",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
+    "ts-jest": "^20.0.9",
     "typescript": "^2.4.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.3.0",
     "webpack-visualizer-plugin": "^0.1.11"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/test/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "collectCoverage": true,
+    "coverageDirectory": "../../test/Sejil.Client.Test/coverage",
+    "coverageReporters": [
+      "lcov"
+    ],
+    "mapCoverage": true
   }
 }
