--- a/src/Sejil.Server/Sejil.csproj
+++ b/src/Sejil.Server/Sejil.csproj
@@ -45,12 +45,12 @@
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0-*" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0-*" />
-    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0-*" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.0-*" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0-*" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.0-dev-10172" />
   </ItemGroup>
 
   <ItemGroup>
