--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -1,56 +1,31 @@
 {
   "name": "sejil",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "author": "Alaa Masoud",
-  "license": "Apache 2.0",
+  "version": "1.1.0",
+  "private": true,
   "dependencies": {
-    "antd": "^2.13.0",
-    "mobx": "^3.2.2",
-    "mobx-react": "^4.2.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "tslib": "^1.7.1"
+    "antd": "^3.0.2",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts-ts": "2.8.0"
+  },
+  "scripts": {
+    "start": "react-app-rewired start --scripts-version react-scripts-ts",
+    "build": "react-app-rewired build --scripts-version react-scripts-ts",
+    "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
+    "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.8",
-    "@types/react": "^16.0.5",
-    "@types/react-dom": "^15.5.4",
-    "awesome-typescript-loader": "^3.2.3",
-    "css-loader": "^0.28.7",
-    "gulp": "^3.9.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-rename": "^1.2.2",
-    "jest": "^21.0.2",
+    "@types/jest": "^21.1.8",
+    "@types/node": "^8.5.1",
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
+    "jest-fetch-mock": "^1.4.0",
     "mobx-react-devtools": "^4.2.15",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "^0.18.2",
-    "ts-jest": "^21.0.0",
-    "typescript": "^2.5.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.5.6",
+    "react-app-rewire-less": "^2.1.0",
+    "react-app-rewired": "^1.4.0",
+    "ts-import-plugin": "^1.4.3",
     "webpack-visualizer-plugin": "^0.1.11"
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/test/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json"
-    ],
-    "collectCoverage": true,
-    "coverageDirectory": "../../test/Sejil.Client.Test/coverage",
-    "coverageReporters": [
-      "lcov"
-    ],
-    "mapCoverage": true
   }
 }
