--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,22 @@ dist/
 nuget-build/
 [Bb]in/
 [Oo]bj/
+build/
 
 package-lock.json
 
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 src/Sejil.Server/index.html
 coverage/
 
 ignore/
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
