--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -3,11 +3,11 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.0.2",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "antd": "3.0.2",
+    "mobx": "3.4.1",
+    "mobx-react": "4.3.5",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-scripts-ts": "2.8.0"
   },
   "scripts": {
@@ -17,15 +17,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.5.1",
-    "@types/react": "^16.0.31",
-    "@types/react-dom": "^16.0.3",
-    "jest-fetch-mock": "^1.4.0",
-    "mobx-react-devtools": "^4.2.15",
-    "react-app-rewire-less": "^2.1.0",
-    "react-app-rewired": "^1.4.0",
-    "ts-import-plugin": "^1.4.3",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "@types/jest": "21.1.8",
+    "@types/node": "8.5.1",
+    "@types/react": "16.0.31",
+    "@types/react-dom": "16.0.3",
+    "jest-fetch-mock": "1.4.0",
+    "mobx-react-devtools": "4.2.15",
+    "react-app-rewire-less": "2.1.0",
+    "react-app-rewired": "1.4.0",
+    "ts-import-plugin": "1.4.3",
+    "webpack-visualizer-plugin": "0.1.11"
   }
 }
