--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "sejil",
-  "version": "1.1.0",
-  "private": true,
-  "dependencies": {
-    "antd": "3.0.2",
-    "mobx": "3.4.1",
-    "mobx-react": "4.3.5",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-scripts-ts": "2.8.0"
-  },
-  "scripts": {
-    "start": "react-app-rewired start --scripts-version react-scripts-ts",
-    "build": "react-app-rewired build --scripts-version react-scripts-ts",
-    "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
-    "eject": "react-scripts-ts eject"
-  },
-  "devDependencies": {
-    "@types/jest": "21.1.8",
-    "@types/node": "8.5.1",
-    "@types/react": "16.0.31",
-    "@types/react-dom": "16.0.3",
-    "jest-fetch-mock": "1.4.0",
-    "mobx-react-devtools": "4.2.15",
-    "react-app-rewire-less": "2.1.0",
-    "react-app-rewired": "1.4.0",
-    "ts-import-plugin": "1.4.3",
-    "webpack-visualizer-plugin": "0.1.11"
-  }
+    "name": "sejil",
+    "version": "1.1.0",
+    "private": true,
+    "dependencies": {
+        "antd": "^3.5.4",
+        "mobx": "^4.3.0",
+        "mobx-react": "^5.1.2",
+        "react": "^16.4.0",
+        "react-dom": "^16.4.0",
+        "react-scripts-ts": "2.16.0"
+    },
+    "scripts": {
+        "start": "react-app-rewired start --scripts-version react-scripts-ts",
+        "build": "react-app-rewired build --scripts-version react-scripts-ts",
+        "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts"
+    },
+    "devDependencies": {
+        "@types/jest": "^22.2.3",
+        "@types/node": "^10.1.3",
+        "@types/react": "^16.3.14",
+        "@types/react-dom": "^16.0.5",
+        "jest-fetch-mock": "^1.6.2",
+        "mobx-react-devtools": "^5.0.1",
+        "react-app-rewire-less": "^2.1.1",
+        "react-app-rewired": "^1.5.2",
+        "ts-import-plugin": "^1.4.5",
+        "typescript": "^2.8.3",
+        "webpack-visualizer-plugin": "^0.1.11"
+    }
 }
