--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -3,11 +3,11 @@
     "version": "1.1.0",
     "private": true,
     "dependencies": {
-        "antd": "^3.5.4",
-        "mobx": "^4.3.0",
-        "mobx-react": "^5.1.2",
-        "react": "^16.4.0",
-        "react-dom": "^16.4.0",
+        "antd": "3.5.4",
+        "mobx": "4.3.0",
+        "mobx-react": "5.1.2",
+        "react": "16.4.0",
+        "react-dom": "16.4.0",
         "react-scripts-ts": "2.16.0"
     },
     "scripts": {
@@ -16,16 +16,16 @@
         "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts"
     },
     "devDependencies": {
-        "@types/jest": "^22.2.3",
-        "@types/node": "^10.1.3",
-        "@types/react": "^16.3.14",
-        "@types/react-dom": "^16.0.5",
-        "jest-fetch-mock": "^1.6.2",
-        "mobx-react-devtools": "^5.0.1",
-        "react-app-rewire-less": "^2.1.1",
-        "react-app-rewired": "^1.5.2",
-        "ts-import-plugin": "^1.4.5",
-        "typescript": "^2.8.3",
-        "webpack-visualizer-plugin": "^0.1.11"
+        "@types/jest": "22.2.3",
+        "@types/node": "10.1.3",
+        "@types/react": "16.3.14",
+        "@types/react-dom": "16.0.5",
+        "jest-fetch-mock": "1.6.2",
+        "mobx-react-devtools": "5.0.1",
+        "react-app-rewire-less": "2.1.1",
+        "react-app-rewired": "1.5.2",
+        "ts-import-plugin": "1.4.5",
+        "typescript": "2.8.3",
+        "webpack-visualizer-plugin": "0.1.11"
     }
 }
