--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -3,7 +3,7 @@
     "version": "1.1.0",
     "private": true,
     "dependencies": {
-        "antd": "^3.5.4",
+        "antd": "3.10.1",
         "mobx": "^4.3.0",
         "mobx-react": "^5.1.2",
         "react": "^16.4.0",
@@ -25,7 +25,7 @@
         "react-app-rewire-less": "^2.1.1",
         "react-app-rewired": "^1.5.2",
         "ts-import-plugin": "^1.4.5",
-        "typescript": "^2.8.3",
+        "typescript": "3.2.2",
         "webpack-visualizer-plugin": "^0.1.11"
     }
 }
