Add OpenIdConnect sample

--- a/sample/Sample2.0/appsettings.json
+++ b/sample/Sample2.0/appsettings.json
@@ -11,5 +11,13 @@
         "Default": "Warning"
       }
     }
+  },
+
+  "Authentication": {
+    "Authority": "https://identityprovider-dev.chg-meridian.com",    
+    "ResponseType": "code id_token",
+    "ClientId": "sejil_web",
+    "ClientSecret": "secret",
+    "Scope": [ "openid", "profile"]
   }
 }
