--- a/sample/Sample2.0/appsettings.json
+++ b/sample/Sample2.0/appsettings.json
@@ -14,10 +14,12 @@
   },
 
   "Authentication": {
-    "Authority": "https://identityprovider-dev.chg-meridian.com",    
-    "ResponseType": "code id_token",
-    "ClientId": "sejil_web",
-    "ClientSecret": "secret",
-    "Scope": [ "openid", "profile"]
+    "Authority": "https://twenzel.auth0.com",
+    "ResponseType": "code",
+    "ClientId": "USER_SECRET",
+    "ClientSecret": "USER_SECRET",
+    "Scope": [ "openid", "profile", "email" ],
+    "CallbackPath": "/signin-auth0",
+    "ClaimsIssuer": "Auth0"
   }
 }
