Fix shown user name

--- a/sample/Sample2.0/appsettings.json
+++ b/sample/Sample2.0/appsettings.json
@@ -14,7 +14,7 @@
   },
 
   "Authentication": {
-    "Authority": "https://twenzel.auth0.com",
+    "Authority": "https://sample.auth0.com",
     "ResponseType": "code",
     "ClientId": "USER_SECRET",
     "ClientSecret": "USER_SECRET",
