--- a/src/Sejil.Server/Sejil.csproj
+++ b/src/Sejil.Server/Sejil.csproj
@@ -48,7 +48,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0" />
-    <PackageReference Include="Ben.Demystifier" Version="*" />
+    <PackageReference Include="Ben.Demystifier" Version="0.1.3" />
   </ItemGroup>
 
   <ItemGroup>
