--- a/sample/SampleBasic/appsettings.json
+++ b/sample/SampleBasic/appsettings.json
@@ -1,15 +1,10 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }  
+    "AllowedHosts": "*"
 }
