--- a/sample/SampleOIDCAuth/appsettings.json
+++ b/sample/SampleOIDCAuth/appsettings.json
@@ -1,25 +1,23 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "AllowedHosts": "*",
+    "Authentication": {
+        "Authority": "https://sample.auth0.com",
+        "ResponseType": "code",
+        "ClientId": "USER_SECRET",
+        "ClientSecret": "USER_SECRET",
+        "Scope": [
+            "openid",
+            "profile",
+            "email"
+        ],
+        "CallbackPath": "/signin-auth0",
+        "ClaimsIssuer": "Auth0"
     }
-  },
-
-  "Authentication": {
-    "Authority": "https://sample.auth0.com",
-    "ResponseType": "code",
-    "ClientId": "USER_SECRET",
-    "ClientSecret": "USER_SECRET",
-    "Scope": [ "openid", "profile", "email" ],
-    "CallbackPath": "/signin-auth0",
-    "ClaimsIssuer": "Auth0"
-  }
 }
