--- a/sample/SampleBasicAuth/SampleBasicAuth.csproj
+++ b/sample/SampleBasicAuth/SampleBasicAuth.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-sample-6C42CEA9-89AE-4008-A8C1-8047FA7DA53C</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Bazinga.AspNetCore.Authentication.Basic" Version="2.0.1" />
-    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.1-dev-00209" />       
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />       
   </ItemGroup>
 
   <ItemGroup>
