--- a/src/Sejil.Server/Sejil.csproj
+++ b/src/Sejil.Server/Sejil.csproj
@@ -1,21 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <OutputType>Library</OutputType>
+    <IsPackable>true</IsPackable>
+
     <Summary>A pluggable logs viewer</Summary>
     <Description>Capture, view and filter your ASP.net core log events right from your app</Description>
     <Authors>Alaa Masoud</Authors>
     <Copyright>Copyright © Alaa Masoud</Copyright>
-    <PackageId>Sejil</PackageId>
     <PackageTags>sejil;logging;structured</PackageTags>
-    <PackageIconUrl></PackageIconUrl>
     <PackageProjectUrl>https://github.com/alaatm/Sejil</PackageProjectUrl>
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
-    <VersionPrefix>2.1.0</VersionPrefix>
-    <AssemblyName>Sejil</AssemblyName>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <DebugType>full</DebugType>
-    <OutputType>Library</OutputType>
+
+    <VersionPrefix>2.1.0</VersionPrefix>
+    <PackageId>Sejil</PackageId>
+    <AssemblyName>Sejil</AssemblyName>
+
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
@@ -39,6 +49,13 @@
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
