--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,19 +8,25 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        build_config: [Debug, Release]
+
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: setup .net
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: "6.0.x"
 
-      - name: run build script
-        run: |
-          chmod +x ./build.sh
-          ./build.sh
+      - name: restore cake tool
+        run: dotnet tool restore
         env:
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OPTOUT: 1
+
+      - name: run build script
+        run: dotnet cake --configuration ${{ matrix.build_config }}
