Fix test failure

--- a/.github/workflows/nupkg.yml
+++ b/.github/workflows/nupkg.yml
@@ -16,6 +16,16 @@ jobs:
       - name: setup .net
         uses: actions/setup-dotnet@v1
         with:
+          dotnet-version: "3.1.x"
+
+      - name: setup .net
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "5.0.x"
+
+      - name: setup .net
+        uses: actions/setup-dotnet@v1
+        with:
           dotnet-version: "6.0.x"
 
       - name: restore cake tool
