Add Sqlite, SqlServer projects. Part of #7

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ build/
 .env.test.local
 .env.production.local
 
-src/Sejil.Server/index.html
+src/Sejil.Server/Sejil/index.html
 
 # Build output
 .nupkg/
