--- a/sample/SampleBasic/SampleBasic.csproj
+++ b/sample/SampleBasic/SampleBasic.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.csproj" />
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil\Sejil.csproj" />
   </ItemGroup>
 
 </Project>
