--- a/sample/SampleOIDCAuth/SampleOIDCAuth.csproj
+++ b/sample/SampleOIDCAuth/SampleOIDCAuth.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.csproj" />
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil\Sejil.csproj" />
   </ItemGroup>
 
 </Project>
