Apply analyzer recommendations

--- a/.editorconfig
+++ b/.editorconfig
@@ -417,3 +417,6 @@ dotnet_naming_symbols.parameters_group.applicable_kinds = parameter
 dotnet_naming_rule.parameters_rule.symbols              = parameters_group
 dotnet_naming_rule.parameters_rule.style                = camel_case_style
 dotnet_naming_rule.parameters_rule.severity             = warning
+
+# CA2007: Do not directly await a Task - Not required for asp.net apps (which is what we target)
+dotnet_diagnostic.CA2007.severity = none
