--- a/src/Sejil.Server/Directory.Build.props
+++ b/src/Sejil.Server/Directory.Build.props
@@ -7,6 +7,10 @@
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
 
+    <AnalysisLevel>latest</AnalysisLevel>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+
     <Summary>A pluggable logs viewer</Summary>
     <Description>Capture, view and filter your ASP.net core log events right from your app</Description>
     <Authors>Alaa Masoud</Authors>
