Refactor to enable multiple relational log stores. Part of #7

--- a/src/Sejil.Server/Sejil/Sejil.csproj
+++ b/src/Sejil.Server/Sejil/Sejil.csproj
@@ -36,6 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Sejil.Sqlite" />
+    <InternalsVisibleTo Include="Sejil.SqlServer" />
     <InternalsVisibleTo Include="Sejil.Test" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
