--- a/sample/SampleBasicAuth/SampleBasicAuth.csproj
+++ b/sample/SampleBasicAuth/SampleBasicAuth.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sejil.Server\Sejil\Sejil.csproj" />
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.Sqlite\Sejil.Sqlite.csproj" />
   </ItemGroup>
 
 </Project>
