--- a/sample/SampleBasic/SampleBasic.csproj
+++ b/sample/SampleBasic/SampleBasic.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sejil.Server\Sejil\Sejil.csproj" />
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.Sqlite\Sejil.Sqlite.csproj" />
   </ItemGroup>
 
 </Project>
