--- a/sample/SampleNet6/SampleNet6.csproj
+++ b/sample/SampleNet6/SampleNet6.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Sejil.Server\Sejil\Sejil.csproj" />
+    <ProjectReference Include="..\..\src\Sejil.Server\Sejil.Sqlite\Sejil.Sqlite.csproj" />
   </ItemGroup>
 
 </Project>
