Refactor store provider repository tests

--- a/test/Sejil.SqlServer.Test/Sejil.SqlServer.Test.csproj
+++ b/test/Sejil.SqlServer.Test/Sejil.SqlServer.Test.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Sejil.Server\Sejil.SqlServer\Sejil.SqlServer.csproj" />
   </ItemGroup>
 
